# squid

./: README.md  pyproject.toml
squid/: __init__.py  __main__.py  _errors.py  app.py  app_layout.py  logo.py  slurm.py
